chapter05/external-service-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
      - ip: 10.0.1.223
      - ip: 10.0.1.171
      - ip: 10.0.2.11
    ports:
      - port: 8080
