chapter05/external-service-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-name
spec:
  type: ExternalName
  externalName: www.baidu.com
  ports:
    - port: 80
