chapter05/kubia-svc-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-rs-service
spec:
  selector:
    app: kubia-rs
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
