chapter05/kubia-ingress-nodeport.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-nodeport
spec:
  ingressClassName: nginx
  rules:
    - host: kubia2.example.com
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: kubia-nodeport
                port:
                  number: 80
